# S2Mosaic

./: .gitignore  Example use.ipynb  README.md  pyproject.toml
s2cfmosaic/: download.py  setup.py
s2mosaic/: __init__.py  coordinator.py  data_reader.py  download.py  helpers.py  mosaic_methods.py  setup.py
tests/: test_mosaic.py
